@@ -1,9 +1,7 @@
 package com.ul88.be.service;
 
-import com.ul88.be.dto.ProblemDto;
 import com.ul88.be.dto.RequestSaveStudentDto;
-import com.ul88.be.dto.RequestUpdateStudentDto;
-import com.ul88.be.dto.ResponseStudentDto;
+import com.ul88.be.dto.StudentDto;
 import com.ul88.be.entity.Student;
 import com.ul88.be.exception.CustomException;
 import com.ul88.be.exception.ErrorCode;
@@ -14,7 +12,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -33,48 +30,35 @@ public class StudentService {
         studentRepository.save(dto.toEntity());
     }
 
-    public void updateStudent(RequestUpdateStudentDto dto) {
+    public void updateStudent(StudentDto dto) {
         Student entity = studentRepository.findById(dto.getId()).orElseThrow(() ->
                 new CustomException(ErrorCode.USER_NOT_FOUND));
 
         if(dto.getName() != null) entity.changeName(dto.getName());
         if(dto.getBojId() != null) entity.changeBojId(dto.getBojId());
         if(dto.getBirth() != null) entity.changeBirth(dto.getBirth());
-
-        if(!dto.getProblems().isEmpty()) {
-            if(entity.getBojId() == null) {
-                throw new CustomException(ErrorCode.BOJ_ID_NOT_EXISTS);
-            }
-            for(ProblemDto p : dto.getProblems()) {
-                entity.addProblem(p.toEntity());
-            }
-        }
-
         studentRepository.save(entity);
     }
 
     @Transactional
-    public List<ResponseStudentDto> getStudents(){
-        return studentRepository.findAll().stream().map(ResponseStudentDto::fromEntity).collect(Collectors.toList());
+    public List<StudentDto> getStudent(){
+        return studentRepository.findAll().stream().map(StudentDto::fromEntity).toList();
     }
 
     @Transactional
-    public ResponseStudentDto getStudent(Long id){
+    public StudentDto getStudent(Long id){
         Student entity = studentRepository.findById(id).orElseThrow(() ->
                 new CustomException(ErrorCode.PK_NOT_FOUND));
 
-        return ResponseStudentDto.fromEntity(entity);
-    }
-
-    @Transactional
-    public ResponseStudentDto getStudent(String name){
-        Student entity = studentRepository.findByName(name).orElseThrow(() ->
-                new CustomException(ErrorCode.USER_NOT_FOUND));
-        return ResponseStudentDto.fromEntity(entity);
+        return StudentDto.fromEntity(entity);
     }
 
     public void deleteStudent(Long id){
         studentRepository.delete(studentRepository.findById(id).orElseThrow(() ->
                 new CustomException(ErrorCode.PK_NOT_FOUND)));
+    }
+
+    public boolean existsStudent(Long id){
+        return studentRepository.existsById(id);
     }
 }
